logs/dag_id=Weather_DAG_V2.5/run_id=scheduled__2024-02-09T015600+0000/task_id=data_to_db/attempt=1.log
[2024-02-09T12:50:45.849+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Weather_DAG_V2.5.data_to_db scheduled__2024-02-09T01:56:00+00:00 [queued]>
[2024-02-09T12:50:45.902+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Weather_DAG_V2.5.data_to_db scheduled__2024-02-09T01:56:00+00:00 [queued]>
[2024-02-09T12:50:45.903+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 2
[2024-02-09T12:50:46.105+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): data_to_db> on 2024-02-09 01:56:00+00:00
[2024-02-09T12:50:46.245+0000] {standard_task_runner.py:60} INFO - Started process 13230 to run task
[2024-02-09T12:50:46.262+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'Weather_DAG_V2.5', 'data_to_db', 'scheduled__2024-02-09T01:56:00+00:00', '--job-id', '4056', '--raw', '--subdir', 'DAGS_FOLDER/Weather_dag.py', '--cfg-path', '/tmp/tmp93dzl_wx']
[2024-02-09T12:50:46.264+0000] {standard_task_runner.py:88} INFO - Job 4056: Subtask data_to_db
[2024-02-09T12:50:46.621+0000] {task_command.py:423} INFO - Running <TaskInstance: Weather_DAG_V2.5.data_to_db scheduled__2024-02-09T01:56:00+00:00 [running]> on host 06573eafe810
[2024-02-09T12:50:47.158+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Weather_DAG_V2.5' AIRFLOW_CTX_TASK_ID='data_to_db' AIRFLOW_CTX_EXECUTION_DATE='2024-02-09T01:56:00+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='scheduled__2024-02-09T01:56:00+00:00'
[2024-02-09T12:50:47.319+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-09T12:50:47.372+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/Weather_dag.py", line 73, in csv_db
    hook.insert_rows(table='weather_tab', rows=CSV_DATA)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 541, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ... weather_tab  VALUES ('U','n','n','a','m','e','d',':',' ','0...
                                                             ^

[2024-02-09T12:50:47.519+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=Weather_DAG_V2.5, task_id=data_to_db, execution_date=20240209T015600, start_date=20240209T125045, end_date=20240209T125047
[2024-02-09T12:50:47.592+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 4056 for task data_to_db (INSERT has more expressions than target columns
LINE 1: ... weather_tab  VALUES ('U','n','n','a','m','e','d',':',' ','0...
                                                             ^
; 13230)
[2024-02-09T12:50:47.659+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-09T12:50:47.902+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
